--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -59,6 +59,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.build.sourceVersion>1.6</project.build.sourceVersion>
 		<project.build.targetVersion>1.6</project.build.targetVersion>
+		<jaxb.version>2.1.13</jaxb.version>
 	</properties>
 
 	<build>
