--- a/qualitas-engines-api-configuration/pom.xml
+++ b/qualitas-engines-api-configuration/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${qualitas.version}</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.google.qualitas.engines.api</groupId>
 	<artifactId>qualitas-engines-api-configuration</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${qualitas.version}</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-configuration</name>
@@ -26,7 +26,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>jaxb2-maven-plugin</artifactId>
-				<version>1.3</version>
+				<version>${jaxb2-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
