--- a/qualitas-engines-api-deployment/pom.xml
+++ b/qualitas-engines-api-deployment/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${qualitas.version}</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.google.code.qualitas.engines.api</groupId>
 	<artifactId>qualitas-engines-api-deployment</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${qualitas.version}</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-deployment</name>
@@ -18,7 +18,7 @@
 		<dependency>
 			<groupId>com.google.code.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${qualitas.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
