--- a/qualitas-engines-ode-validation/pom.xml
+++ b/qualitas-engines-ode-validation/pom.xml
@@ -3,55 +3,50 @@
 	<parent>
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.google.code.qualitas</groupId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>${qualitas.version}</version>
 		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.google.qualitas.engines.ode</groupId>
 	<artifactId>qualitas-engines-ode-validation</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${qualitas.version}</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-ode-validation</name>
-	<url>http://maven.apache.org</url>
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-validation</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${qualitas.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.qualitas.engines.ode</groupId>
 			<artifactId>qualitas-engines-ode-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${qualitas.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging-api</artifactId>
-			<version>1.1</version>
+			<artifactId>commons-logging</artifactId>
+			<version>${commons-logging.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-exec</artifactId>
-			<version>1.0.1</version>
+			<version>${commons-exec.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
