--- a/qualitas/pom.xml
+++ b/qualitas/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.google.code.qualitas</groupId>
 	<artifactId>qualitas</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${qualitas.version}</version>
 	<packaging>pom</packaging>
 
 	<name>qualitas</name>
@@ -12,8 +12,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.sourceVersion>1.6</project.build.sourceVersion>
-		<project.build.targetVersion>1.6</project.build.targetVersion>
+		<qualitas.version>0.0.1-SNAPSHOT</qualitas.version>
 	</properties>
 
 </project>
