--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -67,6 +67,7 @@
 		<maven-jetty-plugin.version>6.1.25</maven-jetty-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
 		<maven-checkstyle-plugin.version>2.8</maven-checkstyle-plugin.version>
+		<xalan.version>2.7.1</xalan.version>
 	</properties>
 
 	<build>
