all changes related to refactoring in qualitas-engines-api-core

--- a/qualitas-engines-ode-core/pom.xml
+++ b/qualitas-engines-ode-core/pom.xml
@@ -44,7 +44,7 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.qualitas.utils</groupId>
