all changes related to refactoring in qualitas-engines-api-core

--- a/qualitas-engines-ode-deployment/pom.xml
+++ b/qualitas-engines-ode-deployment/pom.xml
@@ -67,6 +67,10 @@
 					<artifactId>ode-bpel-store</artifactId>
 					<groupId>org.apache.ode</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>spring</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
