--- a/qualitas-engines-api-factory/pom.xml
+++ b/qualitas-engines-api-factory/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.google.code.qualitas.engines.api</groupId>
 	<artifactId>qualitas-engines-api-factory</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>${qualitas.version}</version>
 	<packaging>jar</packaging>
 
 	<name>qualitas-engines-api-factory</name>
