--- a/qualitas-engines-ode-spring/pom.xml
+++ b/qualitas-engines-ode-spring/pom.xml
@@ -19,62 +19,62 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8</version>
-      <scope>${junit.version}</scope>
+      <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-context</artifactId>
-    	<version>3.0.6.RELEASE</version>
+    	<version>${spring.version}</version>
     	<type>jar</type>
     	<scope>provided</scope>
     </dependency>
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-test</artifactId>
-    	<version>3.0.6.RELEASE</version>
+    	<version>${spring.version}</version>
     	<type>jar</type>
     	<scope>test</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-core</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-factory</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-deployment</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-instrumentation</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-invocation</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
     <dependency>
     	<groupId>com.google.code.qualitas.engines.ode</groupId>
     	<artifactId>qualitas-engines-ode-validation</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${qualitas.version}</version>
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
