--- a/qualitas-integration-amqp/pom.xml
+++ b/qualitas-integration-amqp/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit</artifactId>
-			<version>1.0.0.RELEASE</version>
+			<version>${spring-rabbit.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
