--- a/qualitas-internal-installation/pom.xml
+++ b/qualitas-internal-installation/pom.xml
@@ -19,12 +19,17 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>2.9.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring</artifactId>
-			<version>2.9.0</version>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-amqp</artifactId>
+			<version>${camel.version}</version>
 		</dependency>
 		<!-- qualitas -->
 		<dependency>
@@ -38,42 +43,18 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<version>${log4j.version}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-amqp</artifactId>
-			<version>2.9.0</version>
-			<!-- 
-			<exclusions>
-				<exclusion>
-					<artifactId>qpid-client</artifactId>
-					<groupId>org.apache.qpid</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>qpid-common</artifactId>
-					<groupId>org.apache.qpid</groupId>
-				</exclusion>
-			</exclusions> -->
-		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>org.apache.qpid</groupId>
-			<artifactId>qpid-client</artifactId>
-			<version>0.14</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency> -->
 	</dependencies>
 
 	<build>
@@ -82,7 +63,7 @@
 			<plugin>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-maven-plugin</artifactId>
-				<version>2.9.0</version>
+				<version>${camel.version}</version>
 			</plugin>
 		</plugins>
 	</build>
