--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -123,6 +123,13 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.google.code.qualitas.services.security</groupId>
+				<artifactId>qualitas-services-security-spring</artifactId>
+				<version>${qualitas.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
 				<groupId>com.google.code.qualitas.internal.installation</groupId>
 				<artifactId>qualitas-internal-installation</artifactId>
 				<version>${qualitas.version}</version>
